--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <nav class="oscuro">
@@ -106,10 +106,10 @@
         <article class="evento">
           <div class="espaciado">
             <img
-              src="assets/img/simposio-vegan.jpg"
+              src="./assets/img/simposio-vegan.jpg"
               alt="Events simposio vegan"
             />
-            <a href="/SVD.html" style="text-decoration: none"
+            <a href="SVD.html" style="text-decoration: none"
               ><h3>Simposio Vegan DB</h3></a
             >
           </div>
@@ -117,7 +117,7 @@
 
         <article class="evento">
           <div class="espaciado">
-            <img src="assets/img/machine-learning.jpg" alt="machine-learning" />
+            <img src="./assets/img/machine-learning.jpg" alt="machine-learning" />
             <h3>Machine learning 101</h3>
           </div>
         </article>
