Url de imagenes corregido- icono Navbar corregido

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <nav class="oscuro">
       <ul>
         <li class="icono">
-          <a href="#inicio">
+          <a href="/index.html">
             <img
               id="imagen_menu"
-              src="/assets/img/coffee-cup.svg"
+              src="./assets/img/coffee-cup.svg"
               alt="imagen_de_taza_de_cafe"
             />
           </a>
@@ -62,7 +62,7 @@
       <div class="centrado">
         <div class="imagen-speaker">
           <img
-            src="/assets/img/speaker.jpg"
+            src="./assets/img/speaker.jpg"
             alt="exponente_de_charla"
             width="auto"
             height="auto"
