--- a/SVD.html
+++ b/SVD.html
@@ -30,10 +30,10 @@
     <nav class="oscuro">
       <ul>
         <li class="icono">
-          <a href="/index.html">
+          <a href="index.html">
             <img
               id="imagen_menu"
-              src="/assets/img/coffee-cup.svg"
+              src="./assets/img/coffee-cup.svg"
               alt="imagen_de_taza_de_cafe"
             />
           </a>
