Color evento corregido - Correccion url imagen de header en CSS-V2

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               alt="Events simposio vegan"
             />
             <a href="SVD.html" style="text-decoration: none"
-              ><h3>Simposio Vegan DB</h3></a
+              ><h3 style="color: black;">Simposio Vegan DB</h3></a
             >
           </div>
         </article>
