--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="oscuro">
       <ul>
         <li class="icono">
-          <a href="/index.html">
+          <a href="#">
             <img
               id="imagen_menu"
               src="./assets/img/coffee-cup.svg"
@@ -50,7 +50,7 @@
     </header>
 
     <section id="primera">
-      <img src="assets/img/we-work.jpg" alt="We work location" />
+      <img id="ubicacion" src="assets/img/we-work.jpg" alt="We work location" />
       <h2>¿Donde nos juntamos?</h2>
       <p>
         Todos los martes y viernes, de 19:00 a 22:00 en We Work, Calle Baker
@@ -58,7 +58,7 @@
       </p>
     </section>
 
-    <section class="speaker">
+    <section id="proxima-charla" class="speaker">
       <div class="centrado">
         <div class="imagen-speaker">
           <img
