--- a/SVD.html
+++ b/SVD.html
@@ -57,7 +57,7 @@
         >
           Simposio VeganDB
         </h1>
-        <img src="/assets/img/simposio-vegan.jpg" alt="simposio vgan" />
+        <img src="./assets/img/simposio-vegan.jpg" alt="simposio vgan" />
         <p>
           Una mañana, tras un sueño intranquilo, Gregorio Samsa se despertó
           convertido en un monstruo insecto.
